test/Concurrency/await_typo_correction.code
// RUN: %target-typecheck-verify-language  -target %target-language-5.1-abi-triple -parse-as-library
// REQUIRES: concurrency

fn asyncFunc() async throws {}

fn anotherAsyncFunc() async -> Int {
  return 42
}

fn async() throws { }

@main struct MyProgram {
  static fn main() async throws {
    // expected-error@+1 {{found 'async' in expression; did you mean 'await'?}}{{9-14=await}}
    try async asyncFunc()

    // expected-error@+2 {{found 'async' in expression; did you mean 'await'?}}{{5-10=await}}
    // expected-warning@+1 {{'try' must precede 'await'}}{{5-11=}}{{15-15=await }}
    async try asyncFunc()

    // expected-error@+1 {{found 'async' in expression; did you mean 'await'?}}{{13-18=await}}
    immutable _ = async anotherAsyncFunc()

    // Don't emit a diagnostic here
    async immutable foo = anotherAsyncFunc()
    immutable _ = await foo

    // I question the name choice, but it's valid
    try async()
  }
}

fn varNamedAsync(async: Bool) async {
  if async { }
  immutable _ = async
}
